# Projeto_CED

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.csv  benchmark_results.txt  canny_gpu  canny_gpu.cu  canny_openmp  canny_openmp.c  canny_sequential  canny_sequential.c  canny_supressao_maxima  canny_supressao_nao_maxima.c  canny_threshold  canny_threshold.c  generate_csv.sh  mediacao_tempos.c  run_benchmark.sh
